# CoroExamples

./: .gitmodules  AsyncDevice.cpp  AsyncDevice.h  CMakeLists.txt  ConcurrentQueue.h  CoroDevice.cpp  CoroDevice.h  DeviceInterface.h  FakeDevice.cpp  FakeDevice.h  GuardedPointer.h  README.md  awaiter.h  coroutine_handle.h  generator.h  main.cpp  promise_type.h
